# Transclassify

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  start.sh  stop.sh
backend/: export_openapi.py  pyproject.toml
backend/app/: __init__.py  ai.py  config.py  db.py  main.py  schemas.py  serp.py
backend/tests/: test_ai.py  test_routes.py  test_serp.py
data/: README.md  __init__.py  fetch_dodatathings.py  generate.py  schema.py  store.py  templates.py  transaction_patterns.md
data/category_sets/: amazon_as_groceries.json  ecommerce_seller.json  freelancer_v1.json  nonprofit_org.json  personal_budget.json  rental_property.json  restaurant_owner.json  student_budget.json
data/tests/: test_store.py  test_templates.py
evals/: README.md  __init__.py  loader.py  run.py  schema.py  score.py
evals/category_sets/: amazon_as_shopping.json  budgeter_v1.json  freelancer_schedule_c.json  small_business_coa.json
evals/dodatathings/: README.md  prepare.py
evals/hand_labelled/: README.md  data.jsonl
evals/llm_generated/: README.md  generate.py
evals/tests/: test_score.py
frontend/: index.html  openapi-ts.config.ts  openapi.json  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
models/: __init__.py  base.py  encoder_common.py  registry.py  types.py
models/bi_encoder/: __init__.py  (+1 more)
training/: README.md  pyproject.toml
training/bi_encoder/: train.py
training/cross_encoder/: train.py
training/llm_lora/: Modelfile  README.md  mlx_make_data.py  train.py  try_one.py
(+16 files in other folders)
