[project]
name = "transclassify-models"
version = "0.1.0"
description = "Swappable categorization models shared by the backend and the eval harness."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.9",
    "instructor>=1.6",
    "litellm>=1.51",
]

# Installed editable into backend/.venv so `import models` resolves to ./models
# from the backend, the eval runner, and tests alike.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["models"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
